--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,12 @@
 
 [alias]
 
+    # Git add, git commit, git push
+    cmp = "!f() { git add -A && git commit -m \"$@\" && git push; }; f"
+
+    # Git status
+    s = status
+
     # Git log with tree view
     tlog="!git log --all --decorate --oneline --graph"
 
