update cmp to acp

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,7 +16,7 @@
     s = status
 
     # Git add, git commit, git push
-    cmp = "!f() { git add -A && git commit -m \"$@\" && git push; }; f"
+    acp = "!f() { git add -A && git commit -m \"$@\" && git push; }; f"
 
     # Git log with tree view
     tlog="!git log --all --decorate --oneline --graph"
