--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,6 @@
     ;autocrlf = true
 
 [alias]
-
     # Status
     s = status
 
@@ -17,6 +16,9 @@
 
     # Git add, git commit, git push
     acp = "!f() { git add -A && git commit -m \"$@\" && git push; }; f"
+
+    # Git commit, git push
+    cp = "!f() { git commit -m \"$@\" && git push; }; f"
 
     # Git log with tree view
     tlog="!git log --all --decorate --oneline --graph"
