--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,11 @@
 [user]
 	name = Deniz Gökçin
     email = dgokcin@gmail.com
+    ;email = deniz.gokcin@ge.com
+
+;[core]
+    ;filemode = false
+    ;autocrlf = true
 
 [alias]
     # Status
