--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [user]
 	name = Deniz Gökçin
-    email = dgokcin@gmail.com
-    ;email = deniz.gokcin@ge.com
+    ;email = dgokcin@gmail.com
+    email = deniz.gokcin@ge.com
 
 [core]
     filemode = false
