--- a/.vsvimrc
+++ b/.vsvimrc
@@ -50,6 +50,14 @@ set mat=2
 """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 " => Mappings and configurations for better vi
 """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+
+" Maps <leader>f formatting paragraph, without loosing the cursor position
+noremap <leader>f gwap
+
+" Makes working with long lines easier, without breaking 5j, 5k behaviour
+nnoremap <expr> j v:count ? (v:count > 5 ? "m'" . v:count : '') . 'j' : 'gj'
+nnoremap <expr> k v:count ? (v:count > 5 ? "m'" . v:count : '') . 'k' : 'gk'
+
 " Clears highlights on hitting esc twice
 nnoremap <esc><esc> :noh<return>
 
