--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-.vim_runtime/temp_dirs/*
-!.vim_runtime/temp_dirs/undodir/.gitkeep
+vim/.vim_runtime/temp_dirs/*
+vim/!.vim_runtime/temp_dirs/undodir/.gitkeep
 *.DS_Store
