--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".vim_runtime/sources_non_forked/vim-bracketed-paste"]
+[submodule ".ide/vscode/vscode-settings"]
 	path = .vim_runtime/sources_non_forked/vim-bracketed-paste
-	url = git@github.com:ConradIrwin/vim-bracketed-paste.git
+	url = git@gist.github.com:84196e5d3c71a45750d3eda70353cbe1.git
