--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 vim/.vim_runtime/temp_dirs/*
-ide/vscode/vscode-settings
+vim/.vim_runtime/.vim_runtime
+vscode-settings.json
 !vim/.vim_runtime/temp_dirs/undodir/.gitkeep
 *.DS_Store
