changed ctrl h to shift h

--- a/ide/vs/.vsvimrc
+++ b/ide/vs/.vsvimrc
@@ -58,11 +58,15 @@ noremap <leader>f gwap
 nnoremap j gj
 nnoremap k gk
 
+" move to beginning/end of line 
+nnoremap <Tab> $
+nnoremap <S-Tab> ^
+
 " Move in splits like nerdtree
-nnoremap <C-J> <C-W><C-J>
-nnoremap <C-K> <C-W><C-K>
-nnoremap <C-L> <C-W><C-L>
-nnoremap <C-H> <C-W><C-H>
+nnoremap <S-J> <C-W><C-J>
+nnoremap <S-K> <C-W><C-K>
+nnoremap <S-L> <C-W><C-L>
+nnoremap <S-H> <C-W><C-H>
 
 " Clears highlights on hitting esc twice
 nnoremap <esc><esc> :noh<return>
