--- a/ide/vscode/.vscodevimrc
+++ b/ide/vscode/.vscodevimrc
@@ -51,6 +51,15 @@ set mat=2
 " Easier navigation with long lines
 nnoremap j gj
 nnoremap k gk
+" move to beginning/end of line 
+nnoremap <Tab> $
+nnoremap <S-Tab> ^
+
+" Move in splits like nerdtree
+nnoremap <S-J> <C-W><C-J>
+nnoremap <S-K> <C-W><C-K>
+nnoremap <S-L> <C-W><C-L>
+nnoremap <S-H> <C-W><C-H>
 
 " Clears highlights on hitting esc twice
 nnoremap <esc><esc> :noh<return>
