--- a/terminal/.terminator.config
+++ b/terminal/.terminator.config
@@ -6,8 +6,8 @@
   title_inactive_bg_color = "#75715e"
   enabled_plugins = APTURLHandler, LaunchpadCodeURLHandler, LaunchpadBugURLHandler
 [keybindings]
-  next_tab = <Primary>Page_Up
-  prev_tab = <Primary>Page_Down
+  split_horiz = <Shift><Super>d
+  split_vert = <Super>d 
 [profiles]
   [[default]]
     icon_bell = False
