reverted the pane splitting

--- a/terminal/.terminator.config
+++ b/terminal/.terminator.config
@@ -6,8 +6,8 @@
   title_inactive_bg_color = "#75715e"
   enabled_plugins = APTURLHandler, LaunchpadCodeURLHandler, LaunchpadBugURLHandler
 [keybindings]
-  split_horiz = <Shift><Super>d
-  split_vert = <Super>d 
+  split_horiz = <Primary><Shift>o
+  split_vert = <Primary>e
 [profiles]
   [[default]]
     icon_bell = False
