added qsearch for searching for a text in the current directory

--- a/terminal/.terminator.config
+++ b/terminal/.terminator.config
@@ -4,6 +4,7 @@
   title_transmit_bg_color = "#f92672"
   title_inactive_bg_color = "#75715e"
   enabled_plugins = APTURLHandler, LaunchpadCodeURLHandler, LaunchpadBugURLHandler
+  suppress_multiple_term_dialog = True
 [keybindings]
   split_horiz = <Primary><Shift>o
   split_vert = <Primary>e
