fixed a typo in the gh action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,9 @@ jobs:
         os:
           - macos-latest
     steps:
-      - name: Check out the codebase.
+      - name: checkout the codebase
         uses: actions/checkout@v2
 
-      - name: Rin Make
+      - name: run make
         run: |
           make
