--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v4.5.1
         env:
-          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: master
           # turn off dockerfilelint, as its a dead project
           # https://github.com/replicatedhq/dockerfilelint/issues/169
