--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule ".vim_runtime/sources_non_forked/ale"]
 	path = .vim_runtime/sources_non_forked/ale
 	url = https://github.com/dense-analysis/ale.git
+[submodule ".vim_runtime/sources_non_forked/vim-terraform"]
+	path = .vim_runtime/sources_non_forked/vim-terraform
+	url = https://github.com/hashivim/vim-terraform.git
