--- a/.vscodevimrc
+++ b/.vscodevimrc
@@ -1,4 +1,4 @@
-"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 " => General Settings
 """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 " Determines the OS
@@ -106,3 +106,6 @@ vnoremap p "_dP
 " Maps <leader>v to visual in word
 noremap <leader>w viw
 
+" Insert blank line below/above
+nnoremap <Enter> m`o<Esc>``
+nnoremap <BS> m`O<Esc>``
