--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -49,7 +49,7 @@ jobs:
         uses: github/super-linter@v4.5.1
         env:
           VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: master
+          DEFAULT_BRANCH: main
           # turn off dockerfilelint, as its a dead project
           # https://github.com/replicatedhq/dockerfilelint/issues/169
           # hadolint will run and is sufficent (no need for two linters)
